<resources>

    <string name="app_name">RideManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_ride_manager">RideManagerActivity</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="view_log">View/Edit Log</string>
    <string name="charts_and_diagrams">Charts and Diagrams</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="ride_manager">Ride Manager</string>
    <string name="goals">Goals</string>
    <string name="plus">+</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="average">Average</string>
    <string name="maximum">Max Speed</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="trainer">Ride was inside</string>
    <string name="time_label">Total Time: </string>
    <string name="distance_label">Total Distance: </string>
    <string name="track_ride">Track Ride</string>

</resources>