<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/backyard">
	
    <TextView
        android:id="@+id/textViewCurDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:padding="@dimen/padding_medium"
        android:text="@string/ride_manager"
        tools:context=".RideManagerActivity" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="46dp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/buttonNewEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewCurDistance"
        android:text="@string/add_new_entry" />

    <Button
        android:id="@+id/buttonCharts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonNewEntry"
        android:text="@string/charts_and_diagrams" />

    <Button
        android:id="@+id/buttonViewLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonCharts"
        android:text="@string/view_log" />

    <Button
        android:id="@+id/buttonOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonExit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/options" />

    <Button
        android:id="@+id/buttonGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonViewLog"
        android:text="@string/goals" />

    <Button
        android:id="@+id/buttonTrackRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonGoals"
        android:text="@string/track_ride" />

</RelativeLayout>
