<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <TextView
        android:id="@+id/max_entry"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="86dp"
        android:text="@string/maximum" />

    <TextView
        android:id="@+id/ave_entry"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="32dp"
        android:layout_toLeftOf="@+id/max_entry"
        android:text="@string/average" />

    <TextView
        android:id="@+id/time_entry"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/time" />

    <TextView
        android:id="@+id/dis_entry"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="27dp"
        android:layout_toLeftOf="@+id/time_entry"
        android:text="@string/distance" />

</RelativeLayout>